# inktrace

./: .gitignore  Dockerfile  README.md  cloud_run_multiagent_handler.py  complete_deployment.sh  debug_policy_agent.py  deploy_to_vm.sh  pyproject.toml  requirements.txt  setup_templates.py
agents/: data_processor.py  policy_agent.py  report_generator.py
demo/: hackathon_demo.py  malicious_agent.py  malicious_agent_auto.py  policy_violation_agent.py  policy_violation_demo.py  stealth_agent.py  threat_detection_demo.py
scripts/: au_guardrails_setup.sql  check_env.sh  deploy_to_cloud_run.sh  diagnose.py  fix_static_ip.sh  inktrace_debug.py  launch.py  launch_fixed.py  monitor.py  quick_diagnose.py  setup_bigquery.py  setup_official_a2a.py  setup_static_ip.sh  test_docker_local.sh  test_official_a2a.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: communications.html  dashboard.html  security_events.html
tentacles/: wiretap.py
