[project]
name = "inktrace"
version = "0.1.0"
description = "ðŸ™ Inktrace - Agent-Based Security Intelligence from the Deep"
authors = [
    {name = "Inktrace Team", email = "team@inktrace.ai"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "agents", "security", "a2a", "monitoring", "octopus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "python-a2a>=0.5.9",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "aiohttp>=3.12.13",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/avipaul6/inktrace"
Repository = "https://github.com/avipaul6/inktrace"
Documentation = "https://github.com/avipaul6/inktrace/docs"
"Bug Tracker" = "https://github.com/avipaul6/inktrace/issues"

[project.scripts]
inktrace = "scripts.launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true